--- a/contact.html
+++ b/contact.html
@@ -11,51 +11,56 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <script src="./js/script.js" type="module"></script>
+
 
 </head>
 
 <body>
- <!-- Header Section -->
- <header>
-  <nav class="navbar">
-        <div class="logo">
-          <h1><a href="#"><span>c</span>harue</a></h1>
-  </div>
-        <div class="menu">
-           <ul>   
-            <li><a href="#">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="prices.html">Prices</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="contact.html">Contact</a></li>
-              <li><a href="about-us.html">About us</a></li>
-                <li><a href="event.html"> Book event</a></li>
-                  </ul>
-                </div>
-                 <div class="hamburger" id="hamburger" onclick="toggleMenu()">
-                    &#9776;
-                </div>
-             </nav>
-         </header>
-  
-<!--contach us-->
+  <!-- Header Section -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <h1><a href="#"><span>c</span>harue</a></h1>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="prices.html">Prices</a></li>
+          <li><a href="service.html">Service</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about-us.html">About us</a></li>
+          <li><a href="event.html"> Book event</a></li>
+        </ul>
+      </div>
+      <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+        &#9776;
+      </div>
+    </nav>
+  </header>
 
-<section class="contact" id="contact">
+  <!--contach us-->
+
+  <section class="contact" id="contact">
     <h1 class="heading"><span>contact</span>us</h1>
     <p>name: Charue Events</p>
     <p>contact: 0695941217</p>
     <p>email:<a href="email:charue.vyago2019@gmail.com">charue.vyago2019@gmail.com</a> </a></p>
     <p>location: Mfuleni, Capetown</p>
-        <p>address: 26754 nomaqisa street</p>
-    <iframe title="myframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105832.39166387069!2d18.606073718920747!3d-34.01147902608114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4eb8ac6a0419%3A0x608ced44bf20aaad!2sMfuleni%2C%20Cape%20Town%2C%207100!5e0!3m2!1sen!2sza!4v1740054704513!5m2!1sen!2sza">frame body</iframe>
+    <p>address: 26754 nomaqisa street</p>
+    <iframe title="myframe"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105832.39166387069!2d18.606073718920747!3d-34.01147902608114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4eb8ac6a0419%3A0x608ced44bf20aaad!2sMfuleni%2C%20Cape%20Town%2C%207100!5e0!3m2!1sen!2sza!4v1740054704513!5m2!1sen!2sza">frame
+      body</iframe>
 
-</section>
-<footer>
-  <section class="footer">
-     <p>&2025 Event Planning || Evenage Thelma Gorwa || WDD 330 Final Project</p>
-     <section id="lastmodified"></section>
-   </section>
- </footer>
- </body>
- </html>
+  </section>
+  <footer>
+    <section class="footer">
+      <p>&2025 Event Planning || Evenage Thelma Gorwa || WDD 330 Final Project</p>
+      <section id="lastmodified"></section>
+    </section>
+  </footer>
+
+  <script src="scripts/script.js"></script>
+</body>
+
+</html>
