--- a/service.html
+++ b/service.html
@@ -11,34 +11,33 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <script src="./js/main.js" type="module"></script>
 
 </head>
 
 <body>
-   <!-- Header Section -->
-   <header>
+  <!-- Header Section -->
+  <header>
     <nav class="navbar">
-          <div class="logo">
-            <h1><a href="#"><span>c</span>harue</a></h1>
-    </div>
-          <div class="menu">
-             <ul>   
-              <li><a href="#">Home</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="prices.html">Prices</a></li>
-              <li><a href="service.html">Service</a></li>
-              <li><a href="contact.html">Contact</a></li>
-                <li><a href="about-us.html">About us</a></li>
-                  <li><a href="event.html"> Book event</a></li>
-                    </ul>
-                  </div>
-                   <div class="hamburger" id="hamburger" onclick="toggleMenu()">
-                      &#9776;
-                  </div>
-               </nav>
-           </header>
-    
+      <div class="logo">
+        <h1><a href="#"><span>c</span>harue</a></h1>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="prices.html">Prices</a></li>
+          <li><a href="service.html">Service</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about-us.html">About us</a></li>
+          <li><a href="event.html"> Book event</a></li>
+        </ul>
+      </div>
+      <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+        &#9776;
+      </div>
+    </nav>
+  </header>
+
   <!--services we provide-->
   <section class="service" id="service">
     <h3 class="heading"> our <span>services</span> </h3>
@@ -80,9 +79,12 @@
   </section>
   <footer>
     <section class="footer">
-       <p>&2025 Event Planning || Evenage Thelma Gorwa || WDD 330 Final Project</p>
-       <section id="lastmodified"></section>
-     </section>
-   </footer>
-   </body>
-   </html>
+      <p>&2025 Event Planning || Evenage Thelma Gorwa || WDD 330 Final Project</p>
+      <section id="lastmodified"></section>
+    </section>
+  </footer>
+
+  <script src="scripts/script.js"></script>
+</body>
+
+</html>
