--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <script src="./js/script.js" type="module"></script>
 
 </head>
 
@@ -105,6 +104,8 @@
       <section id="lastmodified"></section>
     </section>
   </footer>
+
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
